<resources>
    <string name="app_name">NikBot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_closed">Close</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtNoNet">Internet is not available.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_image_preview">ImagePreview</string>
    <string name="action_download">Downloads</string>
    <string name="title_activity_options">Options</string>
    <string name="name_name">Name:</string>
    <string name="tag_name">Tags:</string>
    <string name="width_name">Width:</string>
    <string name="height_name">Height:</string>
    <string name="ratio_name">Ratio:</string>
    <string name="sort_name">Sort:</string>
    <string name="filter_name">Filter:</string>
    <string name="color_name">Color:</string>
    <string name="date_name">Date:</string>
    <string name="txt_bt_exit_opt">SEARCH</string>
</resources>
